[package]
name = "molecule"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
petgraph = "^0.7"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nom = "7"
lazy_static = "1.5.0"
csv = "1.3.1"
# nauty-pet = { version = "0.12.1", features = ["stable"] }

[profile.release]
debug = true

[[bin]]
name = "build-database"
path = "src/bin/build-database.rs"

[[bin]]
name = "molecule"
path = "src/bin/molecule.rs"
